<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mra_falcons_action_getball</name>
    <version>1.0.0</version>
    <description>Getball action implementation for Falcons robots</description>
    <maintainer email="mra@example.com">MRA Team</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mra_action_base</depend>
    <depend>mra_common_msgs</depend>
    <depend>mra_tracing</depend>
    <depend>yaml-cpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
