<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mra_falcons_action_planning</name>
  <version>0.1.0</version>
  <description>Falcons ActionPlanning: translate action commands from teamplay to targets</description>
  <maintainer email="jan.feitsma@gmail.com">Jan Feitsma</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>mra_common_msgs</build_depend>
  <build_depend>mra_falcons_msgs</build_depend>
  <build_depend>mra_tracing</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
