<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mra_falcons_msgs</name>
    <version>0.2.0</version>
    <description>Falcons-specific ROS2 messages, defined in MRA repo</description>
    <maintainer email="jan.feitsma@gmail.com">Jan Feitsma</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>builtin_interfaces</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
