<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mra_falcons_setpoint_calculation</name>
    <version>0.1.0</version>
    <description>Falcons setpoint calculation component for robot motion planning</description>
    <maintainer email="jan.feitsma@gmail.com">Jan Feitsma</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mra_falcons_configuration</depend>
    <depend>mra_falcons_velocity_control</depend>
    <depend>mra_common_msgs</depend>
    <depend>mra_falcons_msgs</depend>
    <depend>mra_tracing</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>message_filters</depend>
    <depend>yaml-cpp</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
